not all changes were transfered to resolve issue #300 - the changes made to plugins for new-raku were not all transferred to doc-website. So, the annoying double scroll bar did not disappear.

--- a/Website/plugins/page-styling/css/page-styling-dark.css
+++ b/Website/plugins/page-styling/css/page-styling-dark.css
@@ -8,6 +8,17 @@ body {
   color: #f5f5f5;
 }
 
+#left-col-inner {
+  float: none;
+  position: sticky;
+  top: 10vh;
+  max-height: 90vh;
+}
+
+#main-col-inner {
+  flex-grow: inherit;
+}
+
 .navbar-logo-tm {
   color: #e8e8e8;
 }
