--- a/Website/plugins/page-styling/css/page-styling-light.css
+++ b/Website/plugins/page-styling/css/page-styling-light.css
@@ -8,6 +8,17 @@ body {
   color: #030303;
 }
 
+#left-col-inner {
+  float: none;
+  position: sticky;
+  top: 10vh;
+  max-height: 90vh;
+}
+
+#main-col-inner {
+  flex-grow: inherit;
+}
+
 .navbar-logo-tm {
   color: black;
 }
